# FITS-Image

./: CMakeLists.txt  README.md  conanfile.txt
fits/: 10.fits  11.fit  12.fits  15.fit  16.fits
include/: FitsImage.hpp  place-cfitsio-headers-folder-here.txt
include/cfitsio/: fitscore.c  fitsri.cpp  getcol.c  modkey.c
lib/: cfitsio.lib
src/: FitsImage.cpp  main.cpp
